added tap sensor

--- a/appinfo.json
+++ b/appinfo.json
@@ -40,7 +40,7 @@
         ]
     },
     "sdkVersion": "3",
-    "shortName": "Tutorial 1",
+    "shortName": "SFF",
     "targetPlatforms": [
         "aplite",
         "basalt"
